--- a/jojoNomic/Info.plist
+++ b/jojoNomic/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSAppTransportSecurity</key>
+	<dict/>
 	<key>NSLocationAlwaysUsageDescription</key>
 	<string>To Determined Your Weather Location</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
